--- a/generator.yml
+++ b/generator.yml
@@ -5,8 +5,11 @@ modules:
       community: public
     walk:
     - 1.3.6.1.2.1.25.1.1            # NETSERVER-MIB::hrSystemUptime
-    - 1.3.6.1.4.1.12325.1.200.1.1   #SNMPv2-SMI::enterprises::BEGEMOT-PF-MIB::pfStatus
-    - 1.3.6.1.4.1.12325.1.200.1.2   #SNMPv2-SMI::enterprises::BEGEMOT-PF-MIB::pfCounter
-    - 1.3.6.1.4.1.12325.1.200.1.3   #SNMPv2-SMI::enterprises::BEGEMOT-PF-MIB::pfStateTable
-    - 1.3.6.1.4.1.12325.1.200.1.8   #SNMPv2-SMI::enterprises::BEGEMOT-PF-MIB::pfInterfaces
-    - 1.3.6.1.4.1.12325.1.200.1.11  #SNMPv2-SMI::enterprises::BEGEMOT-PF-MIB::pfLabels
+    - 1.3.6.1.2.1.2.2.1.2           # BEGEMOT-PF-MIB::ifDescr
+    - 1.3.6.1.2.1.2.2.1.10          # BEGEMOT-PF-MIB::ifInOctets
+    - 1.3.6.1.2.1.2.2.1.16          # BEGEMOT-PF-MIB::ifOutOctets
+    # - 1.3.6.1.4.1.12325.1.200.1.1   #SNMPv2-SMI::enterprises::BEGEMOT-PF-MIB::pfStatus
+    # - 1.3.6.1.4.1.12325.1.200.1.2   #SNMPv2-SMI::enterprises::BEGEMOT-PF-MIB::pfCounter
+    # - 1.3.6.1.4.1.12325.1.200.1.3   #SNMPv2-SMI::enterprises::BEGEMOT-PF-MIB::pfStateTable
+    # - 1.3.6.1.4.1.12325.1.200.1.8   #SNMPv2-SMI::enterprises::BEGEMOT-PF-MIB::pfInterfaces
+    # - 1.3.6.1.4.1.12325.1.200.1.11  #SNMPv2-SMI::enterprises::BEGEMOT-PF-MIB::pfLabels
