--- a/generator.yml
+++ b/generator.yml
@@ -8,6 +8,8 @@ modules:
     - 1.3.6.1.2.1.2.2.1.2           # BEGEMOT-PF-MIB::ifDescr
     - 1.3.6.1.2.1.2.2.1.10          # BEGEMOT-PF-MIB::ifInOctets
     - 1.3.6.1.2.1.2.2.1.16          # BEGEMOT-PF-MIB::ifOutOctets
+    - 1.3.6.1.2.1.31.1.1.6          # Wifi Router ifHCInOctets
+    - 1.3.6.1.2.1.31.1.1.10         # Wifi Router ifHCOutOctets
     # - 1.3.6.1.4.1.12325.1.200.1.1   #SNMPv2-SMI::enterprises::BEGEMOT-PF-MIB::pfStatus
     # - 1.3.6.1.4.1.12325.1.200.1.2   #SNMPv2-SMI::enterprises::BEGEMOT-PF-MIB::pfCounter
     # - 1.3.6.1.4.1.12325.1.200.1.3   #SNMPv2-SMI::enterprises::BEGEMOT-PF-MIB::pfStateTable
