--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,37 +1,41 @@
 name: ci
 
-on:
-  push:
-  schedule:
-    - cron: "0 0 * * *"
+on: [push, pull_request]
 
 jobs:
   main:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        version:
-          - master
     steps:
-      -
-        name: Set up QEMU
+      - name: Extract branch name
+        shell: bash
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        id: extract_branch
+
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
 
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      -
-        name: Login to DockerHub
+      - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      -
-        name: Build and push
+      - name: Build and push master
         uses: docker/build-push-action@v2
         with:
           push: true
           platforms: linux/amd64,linux/arm64
-          tags: docker.io/fdrake/snmp-exporter-generator:latest
+          tags: ghcr.io/fred-drake/snmp-exporter-generator:latest
+        if: steps.extract_branch.outputs.branch == 'master'
+
+      - name: Build and push version
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          platforms: linux/amd64,linux/arm64
+          tags: ghcr.io/fred-drake/snmp-exporter-generator:${{ steps.extract_branch.outputs.branch }}
+        if: steps.extract_branch.outputs.branch != 'master'
